--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "openai": "^6.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
